Refactored participation commitments (WIP)
